--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@vercel/blob": "^1.1.1",
     "crypto": "^1.0.1",
+    "dompurify": "^3.2.6",
+    "isomorphic-dompurify": "^2.25.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
