--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.16",
+    "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "resend": "^4.6.0"
   },
